--- a/index.html
+++ b/index.html
@@ -125,26 +125,26 @@
 <div class="list-grid-trimming">
 
 <div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
+<a href="images/test_sec4_block_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block1.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
+<a href="images/test_sec4_block_ref2.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block2.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
+<a href="images/test_sec4_block_ref3.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block3.PNG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
+<a href="images/test_sec4_block_ref4.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block4.JPG" alt="">
 </a>
 </div>
 
