--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <div class="list">
 <a href="images/test_sec4_block_ref4.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/test_sec4_block4.JPG" alt="">
+<img src="images/test_sec4_block4.PNG" alt="">
 </a>
 </div>
 
