--- a/index.html
+++ b/index.html
@@ -11,25 +11,32 @@
 
 <header>
 
-<h1 id="logo"><img src="images/logo.png" alt="Artist Web Site"><span>アーティストウェブサイト</span></h1>
+<h1 id="logo">
+    <!-- <img src="images/test_logo.JPG" alt="Artist Web Site">
+    <span>アーティストウェブサイト</span> -->
+    粉川 祐吏
+    <span>キャッチコピーを入れる</span>
+</h1>
+
+
 
 <!--開閉ブロック-->
 <div id="menubar">
 
 <nav>
 <ul>
-<li><a href="#">Home</a></li>
-<li><a href="#section2">Profile</a></li>
-<li><a href="#section3">Activity Report</a></li>
-<li><a href="#section4">Gallery</a></li>
+<li><a href="#">ホーム</a></li>
+<li><a href="#section2">プロフィール</a></li>
+<li><a href="#section3">コピーライター</a></li>
+<li><a href="#section4">作品集</a></li>
 </ul>
 </nav>
 
 <ul class="icons">
-<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-<li><a href="#"><i class="fab fa-line"></i></a></li>
-<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+<!-- <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li> -->
+<li><a href="https://line.me/ti/p/JudYao59d2"><i class="fab fa-line"></i></a></li>
+<!-- <li><a href="#"><i class="fab fa-youtube"></i></a></li> -->
+<li><a href="https://www.instagram.com/rin.yu_chiiiiii?igsh=MW1hdHB0NnQ1NWViMA%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
 </ul>
 
 </div>
@@ -50,10 +57,10 @@
 <!-- ここからsection2 -->
 <section id="section2" class="section">
 
-<h2>Profile</h2>
+<h2>プロフィール</h2>
 <p>これはsection2のコンテンツです。</p>
 
-<h2>テンプレートのご利用前に必ずお読み下さい</h2>
+<!-- <h2>テンプレートのご利用前に必ずお読み下さい</h2>
 
 <h3>利用規約のご案内</h3>
 <p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
@@ -63,7 +70,12 @@
 <p><a href="https://template-party.com/">Template-Party</a>の<a href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
 
 <h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="about.html">こちらをご覧下さい。</a></p>
+<p><a href="about.html">こちらをご覧下さい。</a></p> -->
+
+<!-- <div class="c">
+↓ CMSで簡単にサイト構築もできます ↓<br>
+<a href="#" target="_blank"><img src="images/test_sec2_ref1.JPG" alt=""></a>
+</div>  -->
 
 </section>
 
@@ -72,10 +84,48 @@
 <!-- ここからsection3 -->
 <section id="section3" class="section">
 
-<h2>Activity Report</h2>
-<p>これはsection3のコンテンツです。</p>
+<h2>コピーライター</h2>
+<h3>僕がコピーライターを志す理由</h3>
+<p>
+僕がコピーライターを志す理由。<br>
+人に、与えて生きていきたい。<br>
+学生時代、その想いからカウンセラーを目指していました。<br>
+けれど気づいたことがあります。<br>
+カウンセラーが救えるのは、来談してくれた人だけだと。<br>
+世の中には、誰にも頼れず、暗い顔のまま生きている人がたくさんいる。<br>
+広告という形なら、
+カウンセリングに行かない人にも届くかもしれない。<br>
+言葉の力で、人生の捉え方をそっと変える。<br>
+そのきっかけを渡したいと思いました。<br>
+</p>
+<p>
+良い言葉は、時を超えます。<br>
+僕の残した言葉たちが、未来の誰かを支えるかもしれない。<br>
+それは同時に、自分が生きた証にもなると思うのです。<br>
+</p>
+<p>
+昔から神経質で、感受性が強いがゆえに、
+しんどい時期もありました。<br>
+親からは「私に似ちゃってごめんね。」と<br>
+よく言われていました。<br>
+その言葉に、いつか<br>
+「この性格に産んでくれてありがとう。」と<br>
+胸を張って返せる人生を歩みたい。<br>
+この感受性は、必ず武器になる。<br>
+コピーライターとして、自分らしさで生きていく。<br>
+これが僕の志です。 <br>
+</p>
 
-<dl class="new">
+<p>
+これまで出会ってくれた友人、家族、<br>
+心配もしてくれたすべての人へ。<br>
+「僕は元気にやっています」と。<br>
+広告を通して伝えることが、<br>
+今の僕の目標です。<br>
+</p>    
+
+
+<!-- <dl class="new">
 
 <dt>2024/05/16<span>その他</span></dt>
 <dd>htmlの最後のタグ数行がおかしくなってしまっていました。既にご利用中のお客様は最新テンプレをDLして頂き、htmlの下の数行部分を入れ替えて下さい。</dd>
@@ -98,12 +148,8 @@
 <dt>2023/12/01<span>お知らせ</span></dt>
 <dd>webサイトを公開しました。</dd>
 
-</dl>
+</dl> -->
 
-<div class="c">
-↓ CMSで簡単にサイト構築もできます ↓<br>
-<a href="https://template-party-cms.com/" target="_blank"><img src="https://template-party.com/images/banner/cms2.png" alt=""></a>
-</div>
 </section>
 
 
@@ -111,16 +157,16 @@
 <!-- ここからsection4 -->
 <section id="section4" class="section">
 
-<h2>Gallery</h2>
+<h2>作品集</h2>
 <p>これはsection4のコンテンツです。</p>
 
-<p>ここのサムネイル画像は、長方形であっても正方形にトリミングされるようになっています。<br>
+<!-- <p>ここのサムネイル画像は、長方形であっても正方形にトリミングされるようになっています。<br>
 リンク（aタグ）を指定しないと画像が表示されないので注意して下さい。<br>
 もし、リンクを一切使わずサムネイルだけ出しておきたいなら、aタグをdivタグに置き換えて（&lt;div&gt;〜&lt;/div&gt;）、style.cssの<br>
 .list-grid-trimming .list aを、.list-grid-trimming .list divにすればOKです。</p>
 <p>現在４列ですが、５列や３列に簡単に変更できます。詳しくは、cssフォルダのstyle.cssの<br>
 .list-grid-trimming {<br>
-のブロック内の説明を読んで下さい。</p>
+のブロック内の説明を読んで下さい。</p> -->
 
 <div class="list-grid-trimming">
 
@@ -149,57 +195,57 @@
 </div>
 
 <div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
+<a href="images/test_sec4_block_ref5_wide.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block5.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
+<a href="images/test_sec4_block_ref6.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block6.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
+<a href="images/test_sec4_block_ref7.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block7.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
+<a href="images/test_sec4_block_ref8.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block8.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
+<a href="images/test_sec4_block_ref9.PNG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block9.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section1.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section1.jpg" alt="">
+<a href="images/test_sec4_block_ref10.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block10.JPG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section2.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section2.jpg" alt="">
+<a href="images/test_sec4_block_ref11.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block11.PNG" alt="">
 </a>
 </div>
 
 <div class="list">
-<a href="images/section3.jpg" data-lightbox="group1" data-title="タイトルをここに入れます">
-<img src="images/section3.jpg" alt="">
+<a href="images/test_sec4_block_ref12.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block12.JPG" alt="">
 </a>
 </div>
 
 </div>
 <!--/.list-grid-->
 
-<h3>lightboxを使用しています</h3>
+<!-- <h3>lightboxを使用しています</h3>
 <p>サムネイル画像をクリックすると、画面が暗転してポップアップが開きます。<br>
 海外で配布されているプログラムなので、カスタマイズなどには当サイトでは対応していません。ご自身でGoogle検索などかけてみて下さい。</p>
 <h3>画像を増やしたい場合</h3>
@@ -229,7 +275,7 @@
 <p>cssフォルダのstyle.css冒頭で読み込んでいる「lightbox.cssの読み込み」のブロック。<br>
 html下部で読み込んでいる「lightbox用jsファイルの読み込み」のブロック。</p>
 <p>何年も経過した場合、動作に問題が出てくる可能性があります。<br>
-テンプレートを編集していないのに突然動きがおかしくなった場合は、上記のバージョンを変更して動作するか確認してみて下さい。</p>
+テンプレートを編集していないのに突然動きがおかしくなった場合は、上記のバージョンを変更して動作するか確認してみて下さい。</p> -->
 
 </section>
 
