--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>アーティスト(画家・作家・音楽家・芸能人など)向け 無料ホームページテンプレート tp_artist2</title>
+<title>粉川 祐吏</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="粉川祐吏のプロフィールと作品集">
 <link rel="stylesheet" href="css/style.css">
+ <link rel="apple-touch-icon" href="images/test4.JPG">
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <!-- <img src="images/test_logo.JPG" alt="Artist Web Site">
     <span>アーティストウェブサイト</span> -->
     粉川 祐吏
-    <span>キャッチコピーを入れる</span>
+    <span>〜真面目な変わり者〜</span>
 </h1>
 
 
@@ -27,7 +28,7 @@
 <ul>
 <li><a href="#">ホーム</a></li>
 <li><a href="#section2">プロフィール</a></li>
-<li><a href="#section3">コピーライター</a></li>
+<li><a href="#section3">（仮）コピーライター</a></li>
 <li><a href="#section4">作品集</a></li>
 </ul>
 </nav>
@@ -50,6 +51,7 @@
 
 <!-- ここからsection1 -->
 <section id="section1" class="section">
+
 </section>
 
 
@@ -58,7 +60,109 @@
 <section id="section2" class="section">
 
 <h2>プロフィール</h2>
-<p>これはsection2のコンテンツです。</p>
+
+<!-- <h3>横長画像</h3>
+<p>文章をこちらに記載します<br>
+下に写真が表示される配置です</p>
+
+<a href="images/test_sec4_block_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec4_block1.JPG" alt="" class="test_pic">
+</a> -->
+
+<h3>フレックス１</h3>
+
+<div class="test_flex">
+<div class="test_flex_content">    
+<p>文章をこちらに記載します<br>
+横に写真が表示される配置です</p>
+</div>
+
+<a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec2_pic1.JPG" alt="" class="test_flex_pic">
+</a>
+</div>
+
+<h3>フレックス2</h3>
+
+<div class="test_flex">
+<div class="test_flex_content">    
+<p>文章をこちらに記載します<br>
+横に写真が表示される配置です</p>
+</div>
+
+<a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+<img src="images/test_sec2_pic1.JPG" alt="" class="test_flex_pic">
+</a>
+</div>
+
+
+<div class="container">
+
+        <h2>横スクロール</h2>
+
+        <ul class="horizontal-items">
+            <li class="item">
+                <div>
+                    <h3>アイテム1  ></h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物">
+                    </a>
+                    <p>こちらに文章を記載します<br>
+                    テキストテキストテキスト</p>
+                </div>
+            </li>
+            <li class="item">
+                <div>
+                    <h3>アイテム2  ></h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物">
+                    </a>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </li>
+            <li class="item">
+                <div>
+                    <h3>アイテム3  ></h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物">
+                    </a>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </li>
+            <li class="item">
+                <div>
+                    <h3>アイテム4  ></h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物4">
+                    </a>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </li>
+            <li class="item">
+                <div>
+                    <h3>アイテム5  ></h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物5">
+                    </a>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </li>
+                        <li class="item">
+                <div>
+                    <h3>アイテム6</h3>
+                    <a href="images/test_sec2_ref1.JPG" data-lightbox="group1" data-title="タイトルをここに入れます">
+                    <img src="images/test_sec2_pic1.JPG" alt="動物5">
+                    </a>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </li>
+          </ul>
+        </div>
+
+
+
+
+
 
 <!-- <h2>テンプレートのご利用前に必ずお読み下さい</h2>
 
@@ -84,10 +188,9 @@
 <!-- ここからsection3 -->
 <section id="section3" class="section">
 
-<h2>コピーライター</h2>
+<h2>（仮）コピーライター</h2>
 <h3>僕がコピーライターを志す理由</h3>
 <p>
-僕がコピーライターを志す理由。<br>
 人に、与えて生きていきたい。<br>
 学生時代、その想いからカウンセラーを目指していました。<br>
 けれど気づいたことがあります。<br>
@@ -152,13 +255,11 @@
 
 </section>
 
-
-
 <!-- ここからsection4 -->
 <section id="section4" class="section">
 
 <h2>作品集</h2>
-<p>これはsection4のコンテンツです。</p>
+<p>作品集についての簡単な説明を記載予定</p>
 
 <!-- <p>ここのサムネイル画像は、長方形であっても正方形にトリミングされるようになっています。<br>
 リンク（aタグ）を指定しないと画像が表示されないので注意して下さい。<br>
@@ -284,7 +385,7 @@ html下部で読み込んでいる「lightbox用jsファイルの読み込み」
 </main>
 
 <footer>
-<small>Copyright&copy; <a href="index.html">Artist Web Site</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">Artist Web Site</a> All Rights Reserved.</small><br>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
